; ModuleID = '/home/carl/AnghaBench/linux/sound/pci/extr_sonicvibes.c_snd_sonicvibes_playback_close.c'
source_filename = "/home/carl/AnghaBench/linux/sound/pci/extr_sonicvibes.c_snd_sonicvibes_playback_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_pcm_substream = type { i32 }
%struct.sonicvibes = type { i32, i32* }

@SV_MODE_PLAY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_pcm_substream*)* @snd_sonicvibes_playback_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @snd_sonicvibes_playback_close(%struct.snd_pcm_substream* %0) #0 {
  %2 = alloca %struct.snd_pcm_substream*, align 8
  %3 = alloca %struct.sonicvibes*, align 8
  store %struct.snd_pcm_substream* %0, %struct.snd_pcm_substream** %2, align 8
  %4 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %2, align 8
  %5 = call %struct.sonicvibes* @snd_pcm_substream_chip(%struct.snd_pcm_substream* %4)
  store %struct.sonicvibes* %5, %struct.sonicvibes** %3, align 8
  %6 = load %struct.sonicvibes*, %struct.sonicvibes** %3, align 8
  %7 = getelementptr inbounds %struct.sonicvibes, %struct.sonicvibes* %6, i32 0, i32 1
  store i32* null, i32** %7, align 8
  %8 = load i32, i32* @SV_MODE_PLAY, align 4
  %9 = xor i32 %8, -1
  %10 = load %struct.sonicvibes*, %struct.sonicvibes** %3, align 8
  %11 = getelementptr inbounds %struct.sonicvibes, %struct.sonicvibes* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = and i32 %12, %9
  store i32 %13, i32* %11, align 8
  ret i32 0
}

declare dso_local %struct.sonicvibes* @snd_pcm_substream_chip(%struct.snd_pcm_substream*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
